objects/mirketappm__JIRA_Configuration__mdt.object
<CustomObject>
    <description>set endpoint and security key to connect with jira</description>
    <fields>
        <fullName>mirketappm__Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mirketappm__Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mirketappm__User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>JIRA Configuration</label>
    <pluralLabel>JIRA Configurations</pluralLabel>
</CustomObject>